fix: разделил обновление фотографии на два этапа fix: отладил сброс пароля fix: удалил лишние файлы и комментари fix: избавился от лишнего в swagger
